--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
+*.bak
+*.bak.*
+*.ckpt
+*.old
+*.pyc
 .DS_Store
 .ipynb_checkpoints
+checkpoint
+logs/*
+tf_logs/*
+images/**/*.png
+images/**/*.dot
